--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -39,12 +39,10 @@ jobs:
         run: ./gradlew build sonar --info
         
       - name: SonarQube Scan
-        uses: kitabisa/sonarqube-action@master
-        with:
-          projectBaseDir: '/github/workspace'
+        uses: sonarsource/sonarqube-scan-action@master
         env:
-          host: ${{ secrets.SONAR_HOST_URL }}
-          login: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - name: 테스트 커버리지를 PR에 코멘트로 등록합니다
         id: jacoco
