--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -39,12 +39,8 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: ./gradlew build sonar --info
 
-      - name: 테스트 커버리지를 PR에 코멘트로 등록합니다
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.2
+      - name: Upload Jacoco Report
+        uses: actions/upload-artifact@v3
         with:
-          title: 📝 테스트 커버리지 리포트입니다
-          paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 50
-          min-coverage-changed-files: 50
+          name: jacoco-report # 결과물의 이름
+          path: build/reports/jacoco/test/html
