change report form

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -43,4 +43,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: jacoco-report # 결과물의 이름
-          path: build/reports/jacoco/test/jacocoTestReport
+          path: build/reports/jacoco/test/jacocoTestReport.xml
