--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ test {
 
 sonar {
     properties {
-        property "sonar.projectKey", "test-project"
+        property "sonar.projectKey", "tkdlqh2_CI_CD_test_project_AYZOxDn57MqAnVQy8bfl"
     }
 }
 
